methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:19: error: not found: type Colors
def flower(c:Colors){
             ^